build/transformers/v4.11.0/en/main_classes/processors.mdx
<script>
import Tip from "../../Tip.svelte";
import Youtube from "../../Youtube.svelte";	
export let fw: "pt" | "tf"
</script>

<!--Copyright 2020 The HuggingFace Team. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.
-->

# Processors

This library includes processors for several traditional tasks. These processors can be used to process a dataset into
examples that can be fed to a model.

## Processors

All processors follow the same architecture which is that of the
[DataProcessor](main_classes/processors.html#transformers.DataProcessor). The processor returns a list of
[InputExample](main_classes/processors.html#transformers.InputExample). These
[InputExample](main_classes/processors.html#transformers.InputExample) can be converted to
[InputFeatures](main_classes/processors.html#transformers.InputFeatures) in order to be fed to the model.

<a id='transformers.DataProcessor'></a>
> **class transformers.DataProcessor**()

Base class for data converters for sequence classification data sets.

<a id='transformers.DataProcessor.get_dev_examples'></a>
> **get\_dev\_examples**(self, data_dir)

Gets a collection of [InputExample](main_classes/processors.html#transformers.InputExample) for the dev set.

<a id='transformers.DataProcessor.get_example_from_tensor_dict'></a>
> **get\_example\_from\_tensor\_dict**(self, tensor_dict)


Gets an example from a dict with tensorflow tensors.

> Parameters

tensor_dict -- Keys and values should match the corresponding Glue
tensorflow_dataset examples.


<a id='transformers.DataProcessor.get_labels'></a>
> **get\_labels**(self)

Gets the list of labels for this data set.

<a id='transformers.DataProcessor.get_test_examples'></a>
> **get\_test\_examples**(self, data_dir)

Gets a collection of [InputExample](main_classes/processors.html#transformers.InputExample) for the test set.

<a id='transformers.DataProcessor.get_train_examples'></a>
> **get\_train\_examples**(self, data_dir)

Gets a collection of [InputExample](main_classes/processors.html#transformers.InputExample) for the train set.

<a id='transformers.DataProcessor.tfds_map'></a>
> **tfds\_map**(self, example)


Some tensorflow_datasets datasets are not formatted the same way the GLUE datasets are. This method converts
examples to the correct format.


<a id='transformers.InputExample'></a>
> **class transformers.InputExample**(guid: str, text_a: str, text_b: typing.Optional[str] = None, label: typing.Optional[str] = None)


A single training/test example for simple sequence classification.

> Parameters

guid -- Unique id for the example.
text_a -- string. The untokenized text of the first sequence. For single
sequence tasks, only this sequence must be specified.
text_b -- (Optional) string. The untokenized text of the second sequence.
Only must be specified for sequence pair tasks.
label -- (Optional) string. The label of the example. This should be
specified for train and dev examples, but not for test examples.


<a id='transformers.InputExample.to_json_string'></a>
> **to\_json\_string**(self)

Serializes this instance to a JSON string.

<a id='transformers.InputFeatures'></a>
> **class transformers.InputFeatures**(input_ids: typing.List[int], attention_mask: typing.Optional[typing.List[int]] = None, token_type_ids: typing.Optional[typing.List[int]] = None, label: typing.Union[int, float, NoneType] = None)


A single set of features of data. Property names are the same names as the corresponding inputs to a model.

> Parameters

input_ids -- Indices of input sequence tokens in the vocabulary.
attention_mask -- Mask to avoid performing attention on padding token indices.
Mask values selected in `[0, 1]`: Usually `1` for tokens that are NOT MASKED, `0` for MASKED (padded)
tokens.
token_type_ids -- (Optional) Segment token indices to indicate first and second
portions of the inputs. Only some models use them.
label -- (Optional) Label corresponding to the input. Int for classification problems,
float for regression problems.


<a id='transformers.InputFeatures.to_json_string'></a>
> **to\_json\_string**(self)

Serializes this instance to a JSON string.

## GLUE

[General Language Understanding Evaluation (GLUE)](https://gluebenchmark.com/) is a benchmark that evaluates the
performance of models across a diverse set of existing NLU tasks. It was released together with the paper [GLUE: A
multi-task benchmark and analysis platform for natural language understanding](https://openreview.net/pdf?id=rJ4km2R5t7)

This library hosts a total of 10 processors for the following tasks: MRPC, MNLI, MNLI (mismatched), CoLA, SST2, STSB,
QQP, QNLI, RTE and WNLI.

Those processors are:

- `MrpcProcessor`
- `MnliProcessor`
- `MnliMismatchedProcessor`
- `Sst2Processor`
- `StsbProcessor`
- `QqpProcessor`
- `QnliProcessor`
- `RteProcessor`
- `WnliProcessor`

Additionally, the following method can be used to load values from a data file and convert them to a list of
[InputExample](main_classes/processors.html#transformers.InputExample).

automethod,transformers.data.processors.glue.glue_convert_examples_to_features


### Example usage

An example using these processors is given in the :prefix_link:_run_glue.py
<examples/legacy/text-classification/run_glue.py>_ script.


## XNLI

[The Cross-Lingual NLI Corpus (XNLI)](https://www.nyu.edu/projects/bowman/xnli/) is a benchmark that evaluates the
quality of cross-lingual text representations. XNLI is crowd-sourced dataset based on _MultiNLI
<http://www.nyu.edu/projects/bowman/multinli/>_: pairs of text are labeled with textual entailment annotations for 15
different languages (including both high-resource language such as English and low-resource languages such as Swahili).

It was released together with the paper [XNLI: Evaluating Cross-lingual Sentence Representations](https://arxiv.org/abs/1809.05053)

This library hosts the processor to load the XNLI data:

- `XnliProcessor`

Please note that since the gold labels are available on the test set, evaluation is performed on the test set.

An example using these processors is given in the :prefix_link:_run_xnli.py
<examples/legacy/text-classification/run_xnli.py>_ script.


## SQuAD

[The Stanford Question Answering Dataset (SQuAD)](https://rajpurkar.github.io/SQuAD-explorer//) is a benchmark that
evaluates the performance of models on question answering. Two versions are available, v1.1 and v2.0. The first version
(v1.1) was released together with the paper [SQuAD: 100,000+ Questions for Machine Comprehension of Text](https://arxiv.org/abs/1606.05250). The second version (v2.0) was released alongside the paper [Know What You Don't
Know: Unanswerable Questions for SQuAD](https://arxiv.org/abs/1806.03822).

This library hosts a processor for each of the two versions:

### Processors

Those processors are:

- `SquadV1Processor`
- `SquadV2Processor`

They both inherit from the abstract class `SquadProcessor`

<a id='transformers.data.processors.squad.SquadProcessor'></a>
> **class transformers.data.processors.squad.SquadProcessor**()


Processor for the SQuAD data set. overridden by SquadV1Processor and SquadV2Processor, used by the version 1.1 and
version 2.0 of SQuAD, respectively.


<a id='transformers.data.processors.squad.SquadProcessor.get_dev_examples'></a>
> **get\_dev\_examples**(self, data_dir, filename = None)


Returns the evaluation example from the data directory.

> Parameters

data_dir -- Directory containing the data files used for training and evaluating.
filename -- None by default, specify this if the evaluation file has a different name than the original one
which is _dev-v1.1.json_ and _dev-v2.0.json_ for squad versions 1.1 and 2.0 respectively.


<a id='transformers.data.processors.squad.SquadProcessor.get_examples_from_dataset'></a>
> **get\_examples\_from\_dataset**(self, dataset, evaluate = False)


Creates a list of `SquadExample` using a TFDS dataset.

> Parameters

dataset -- The tfds dataset loaded from _tensorflow_datasets.load("squad")_
evaluate -- Boolean specifying if in evaluation mode or in training mode

> Returns

List of SquadExample

> Examples:

```python
>>> import tensorflow_datasets as tfds
>>> dataset = tfds.load("squad")

>>> training_examples = get_examples_from_dataset(dataset, evaluate=False)
>>> evaluation_examples = get_examples_from_dataset(dataset, evaluate=True)
```


<a id='transformers.data.processors.squad.SquadProcessor.get_train_examples'></a>
> **get\_train\_examples**(self, data_dir, filename = None)


Returns the training examples from the data directory.

> Parameters

data_dir -- Directory containing the data files used for training and evaluating.
filename -- None by default, specify this if the training file has a different name than the original one
which is _train-v1.1.json_ and _train-v2.0.json_ for squad versions 1.1 and 2.0 respectively.



Additionally, the following method can be used to convert SQuAD examples into
`SquadFeatures` that can be used as model inputs.

automethod,transformers.data.processors.squad.squad_convert_examples_to_features


These processors as well as the aforementionned method can be used with files containing the data as well as with the
_tensorflow_datasets_ package. Examples are given below.


### Example usage

Here is an example using the processors as well as the conversion method using data files:

```
# Loading a V2 processor
processor = SquadV2Processor()
examples = processor.get_dev_examples(squad_v2_data_dir)

# Loading a V1 processor
processor = SquadV1Processor()
examples = processor.get_dev_examples(squad_v1_data_dir)

features = squad_convert_examples_to_features( 
examples=examples,
tokenizer=tokenizer,
max_seq_length=max_seq_length,
doc_stride=args.doc_stride,
max_query_length=max_query_length,
is_training=not evaluate,
)
```

Using _tensorflow_datasets_ is as easy as using a data file:

```
# tensorflow_datasets only handle Squad V1.
tfds_examples = tfds.load("squad")
examples = SquadV1Processor().get_examples_from_dataset(tfds_examples, evaluate=evaluate)

features = squad_convert_examples_to_features( 
examples=examples,
tokenizer=tokenizer,
max_seq_length=max_seq_length,
doc_stride=args.doc_stride,
max_query_length=max_query_length,
is_training=not evaluate,
)
```

Another example using these processors is given in the :prefix_link:_run_squad.py
<examples/legacy/question-answering/run_squad.py>_ script.
