build/transformers/v4.14.1/en/main_classes/processors.mdx
---
local: processors
sections:
- local: transformers.DataProcessor
  title: Processors
- local: glue
  sections:
  - local: example-usage
    title: Example usage
  title: GLUE
- local: xnli
  title: XNLI
- local: squad
  sections:
  - local: transformers.data.processors.squad.SquadProcessor
    title: Processors
  - local: example-usage
    title: Example usage
  title: SQuAD
title: Processors
---
<script>
import Tip from "./Tip.svelte";
import Youtube from "./Youtube.svelte";
import Docstring from "./Docstring.svelte";
import CodeBlock from "./CodeBlock.svelte";
import CodeBlockFw from "./CodeBlockFw.svelte";
import ColabDropdown from "./ColabDropdown.svelte";
import IconCopyLink from "./IconCopyLink.svelte";

export let fw: "pt" | "tf"
</script>

<!--Copyright 2020 The HuggingFace Team. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.
-->

<h1 id="processors">Processors</h1>

This library includes processors for several traditional tasks. These processors can be used to process a dataset into
examples that can be fed to a model.

<h2 id="transformers.DataProcessor">Processors</h2>

All processors follow the same architecture which is that of the
[DataProcessor](/docs/transformers/v4.14.1/en/main_classes/processors#transformers.DataProcessor). The processor returns a list of
[InputExample](/docs/transformers/v4.14.1/en/main_classes/processors#transformers.InputExample). These
[InputExample](/docs/transformers/v4.14.1/en/main_classes/processors#transformers.InputExample) can be converted to
[InputFeatures](/docs/transformers/v4.14.1/en/main_classes/processors#transformers.InputFeatures) in order to be fed to the model.

<div class="docstring">

<docstring><name>class transformers.DataProcessor</name><anchor>transformers.DataProcessor</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/utils.py#L81</source><parameters>[]</parameters></docstring>
Base class for data converters for sequence classification data sets.


<div class="docstring">
<docstring><name>get\_dev\_examples</name><anchor>transformers.DataProcessor.get_dev_examples</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/utils.py#L98</source><parameters>[{"name": "data_dir", "val": ""}]</parameters></docstring>
Gets a collection of [InputExample](/docs/transformers/v4.14.1/en/main_classes/processors#transformers.InputExample) for the dev set.

</div>
<div class="docstring">
<docstring><name>get\_example\_from\_tensor\_dict</name><anchor>transformers.DataProcessor.get_example_from_tensor_dict</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/utils.py#L84</source><parameters>[{"name": "tensor_dict", "val": ""}]</parameters><paramsdesc>tensor_dict -- Keys and values should match the corresponding Glue
                tensorflow_dataset examples.</paramsdesc><paramgroups>0</paramgroups></docstring>

        Gets an example from a dict with tensorflow tensors.




</div>
<div class="docstring">
<docstring><name>get\_labels</name><anchor>transformers.DataProcessor.get_labels</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/utils.py#L106</source><parameters>[]</parameters></docstring>
Gets the list of labels for this data set.

</div>
<div class="docstring">
<docstring><name>get\_test\_examples</name><anchor>transformers.DataProcessor.get_test_examples</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/utils.py#L102</source><parameters>[{"name": "data_dir", "val": ""}]</parameters></docstring>
Gets a collection of [InputExample](/docs/transformers/v4.14.1/en/main_classes/processors#transformers.InputExample) for the test set.

</div>
<div class="docstring">
<docstring><name>get\_train\_examples</name><anchor>transformers.DataProcessor.get_train_examples</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/utils.py#L94</source><parameters>[{"name": "data_dir", "val": ""}]</parameters></docstring>
Gets a collection of [InputExample](/docs/transformers/v4.14.1/en/main_classes/processors#transformers.InputExample) for the train set.

</div>
<div class="docstring">
<docstring><name>tfds\_map</name><anchor>transformers.DataProcessor.tfds_map</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/utils.py#L110</source><parameters>[{"name": "example", "val": ""}]</parameters></docstring>

        Some tensorflow_datasets datasets are not formatted the same way the GLUE datasets are. This method converts
        examples to the correct format.
        

</div></div>

<div class="docstring">

<docstring><name>class transformers.InputExample</name><anchor>transformers.InputExample</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/utils.py#L31</source><parameters>[{"name": "guid", "val": ": str"}, {"name": "text_a", "val": ": str"}, {"name": "text_b", "val": ": typing.Optional[str] = None"}, {"name": "label", "val": ": typing.Optional[str] = None"}]</parameters><paramsdesc>guid -- Unique id for the example.
        text_a -- string. The untokenized text of the first sequence. For single
            sequence tasks, only this sequence must be specified.
        text_b -- (Optional) string. The untokenized text of the second sequence.
            Only must be specified for sequence pair tasks.
        label -- (Optional) string. The label of the example. This should be
            specified for train and dev examples, but not for test examples.</paramsdesc><paramgroups>0</paramgroups></docstring>

    A single training/test example for simple sequence classification.





<div class="docstring">
<docstring><name>to\_json\_string</name><anchor>transformers.InputExample.to_json_string</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/utils.py#L50</source><parameters>[]</parameters></docstring>
Serializes this instance to a JSON string.

</div></div>

<div class="docstring">

<docstring><name>class transformers.InputFeatures</name><anchor>transformers.InputFeatures</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/utils.py#L56</source><parameters>[{"name": "input_ids", "val": ": typing.List[int]"}, {"name": "attention_mask", "val": ": typing.Optional[typing.List[int]] = None"}, {"name": "token_type_ids", "val": ": typing.Optional[typing.List[int]] = None"}, {"name": "label", "val": ": typing.Union[int, float, NoneType] = None"}]</parameters><paramsdesc>input_ids -- Indices of input sequence tokens in the vocabulary.
attention_mask -- Mask to avoid performing attention on padding token indices.
Mask values selected in `[0, 1]`: Usually `1` for tokens that are NOT MASKED, `0` for MASKED (padded)
tokens.
token_type_ids -- (Optional) Segment token indices to indicate first and second
portions of the inputs. Only some models use them.
label -- (Optional) Label corresponding to the input. Int for classification problems,
float for regression problems.</paramsdesc><paramgroups>0</paramgroups></docstring>

A single set of features of data. Property names are the same names as the corresponding inputs to a model.





<div class="docstring">
<docstring><name>to\_json\_string</name><anchor>transformers.InputFeatures.to_json_string</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/utils.py#L76</source><parameters>[]</parameters></docstring>
Serializes this instance to a JSON string.

</div></div>

<h2 id="glue">GLUE</h2>

[General Language Understanding Evaluation (GLUE)](https://gluebenchmark.com/) is a benchmark that evaluates the
performance of models across a diverse set of existing NLU tasks. It was released together with the paper [GLUE: A
multi-task benchmark and analysis platform for natural language understanding](https://openreview.net/pdf?id=rJ4km2R5t7)

This library hosts a total of 10 processors for the following tasks: MRPC, MNLI, MNLI (mismatched), CoLA, SST2, STSB,
QQP, QNLI, RTE and WNLI.

Those processors are:

- `MrpcProcessor`
- `MnliProcessor`
- `MnliMismatchedProcessor`
- `Sst2Processor`
- `StsbProcessor`
- `QqpProcessor`
- `QnliProcessor`
- `RteProcessor`
- `WnliProcessor`

Additionally, the following method can be used to load values from a data file and convert them to a list of
[InputExample](/docs/transformers/v4.14.1/en/main_classes/processors#transformers.InputExample).

automethod,transformers.data.processors.glue.glue_convert_examples_to_features


<h3 id="example-usage">Example usage</h3>

An example using these processors is given in the [run_glue.py](https://github.com/huggingface/transformers/tree/master/examples/legacy/text-classification/run_glue.py) script.


<h2 id="xnli">XNLI</h2>

[The Cross-Lingual NLI Corpus (XNLI)](https://www.nyu.edu/projects/bowman/xnli/) is a benchmark that evaluates the
quality of cross-lingual text representations. XNLI is crowd-sourced dataset based on _MultiNLI
&amp;lt;http://www.nyu.edu/projects/bowman/multinli/>_: pairs of text are labeled with textual entailment annotations for 15
different languages (including both high-resource language such as English and low-resource languages such as Swahili).

It was released together with the paper [XNLI: Evaluating Cross-lingual Sentence Representations](https://arxiv.org/abs/1809.05053)

This library hosts the processor to load the XNLI data:

- `XnliProcessor`

Please note that since the gold labels are available on the test set, evaluation is performed on the test set.

An example using these processors is given in the [run_xnli.py](https://github.com/huggingface/transformers/tree/master/examples/legacy/text-classification/run_xnli.py) script.


<h2 id="squad">SQuAD</h2>

[The Stanford Question Answering Dataset (SQuAD)](https://rajpurkar.github.io/SQuAD-explorer//) is a benchmark that
evaluates the performance of models on question answering. Two versions are available, v1.1 and v2.0. The first version
(v1.1) was released together with the paper [SQuAD: 100,000+ Questions for Machine Comprehension of Text](https://arxiv.org/abs/1606.05250). The second version (v2.0) was released alongside the paper [Know What You Don't
Know: Unanswerable Questions for SQuAD](https://arxiv.org/abs/1806.03822).

This library hosts a processor for each of the two versions:

<h3 id="transformers.data.processors.squad.SquadProcessor">Processors</h3>

Those processors are:

- `SquadV1Processor`
- `SquadV2Processor`

They both inherit from the abstract class `SquadProcessor`

<div class="docstring">

<docstring><name>class transformers.data.processors.squad.SquadProcessor</name><anchor>transformers.data.processors.squad.SquadProcessor</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/squad.py#L542</source><parameters>[]</parameters></docstring>

    Processor for the SQuAD data set. overridden by SquadV1Processor and SquadV2Processor, used by the version 1.1 and
    version 2.0 of SQuAD, respectively.
    


<div class="docstring">
<docstring><name>get\_dev\_examples</name><anchor>transformers.data.processors.squad.SquadProcessor.get_dev_examples</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/squad.py#L628</source><parameters>[{"name": "data_dir", "val": ""}, {"name": "filename", "val": " = None"}]</parameters><paramsdesc>data_dir -- Directory containing the data files used for training and evaluating.
            filename -- None by default, specify this if the evaluation file has a different name than the original one
                which is `dev-v1.1.json` and `dev-v2.0.json` for squad versions 1.1 and 2.0 respectively.</paramsdesc><paramgroups>0</paramgroups></docstring>

        Returns the evaluation example from the data directory.




</div>
<div class="docstring">
<docstring><name>get\_examples\_from\_dataset</name><anchor>transformers.data.processors.squad.SquadProcessor.get_examples_from_dataset</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/squad.py#L575</source><parameters>[{"name": "dataset", "val": ""}, {"name": "evaluate", "val": " = False"}]</parameters><paramsdesc>dataset -- The tfds dataset loaded from _tensorflow_datasets.load("squad")_
evaluate -- Boolean specifying if in evaluation mode or in training mode</paramsdesc><paramgroups>0</paramgroups><retdesc>List of SquadExample</retdesc></docstring>

Creates a list of `SquadExample` using a TFDS dataset.





Examples:

```python
>>> import tensorflow_datasets as tfds
>>> dataset = tfds.load("squad")

>>> training_examples = get_examples_from_dataset(dataset, evaluate=False)
>>> evaluation_examples = get_examples_from_dataset(dataset, evaluate=True)
```


</div>
<div class="docstring">
<docstring><name>get\_train\_examples</name><anchor>transformers.data.processors.squad.SquadProcessor.get_train_examples</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/data/processors/squad.py#L606</source><parameters>[{"name": "data_dir", "val": ""}, {"name": "filename", "val": " = None"}]</parameters><paramsdesc>data_dir -- Directory containing the data files used for training and evaluating.
            filename -- None by default, specify this if the training file has a different name than the original one
                which is `train-v1.1.json` and `train-v2.0.json` for squad versions 1.1 and 2.0 respectively.</paramsdesc><paramgroups>0</paramgroups></docstring>

        Returns the training examples from the data directory.




</div></div>

Additionally, the following method can be used to convert SQuAD examples into
`SquadFeatures` that can be used as model inputs.

automethod,transformers.data.processors.squad.squad_convert_examples_to_features


These processors as well as the aforementionned method can be used with files containing the data as well as with the
_tensorflow_datasets_ package. Examples are given below.


<h3 id="example-usage">Example usage</h3>

Here is an example using the processors as well as the conversion method using data files:

```
# Loading a V2 processor
processor = SquadV2Processor()
examples = processor.get_dev_examples(squad_v2_data_dir)

# Loading a V1 processor
processor = SquadV1Processor()
examples = processor.get_dev_examples(squad_v1_data_dir)

features = squad_convert_examples_to_features( 
    examples=examples,
    tokenizer=tokenizer,
    max_seq_length=max_seq_length,
    doc_stride=args.doc_stride,
    max_query_length=max_query_length,
    is_training=not evaluate,
)
```

Using _tensorflow_datasets_ is as easy as using a data file:

```
# tensorflow_datasets only handle Squad V1.
tfds_examples = tfds.load("squad")
examples = SquadV1Processor().get_examples_from_dataset(tfds_examples, evaluate=evaluate)

features = squad_convert_examples_to_features( 
    examples=examples,
    tokenizer=tokenizer,
    max_seq_length=max_seq_length,
    doc_stride=args.doc_stride,
    max_query_length=max_query_length,
    is_training=not evaluate,
)
```

Another example using these processors is given in the [run_squad.py](https://github.com/huggingface/transformers/tree/master/examples/legacy/question-answering/run_squad.py) script.
